# checkpoint3-Citylab_project

./: README.md
install/: local_setup.sh  setup.sh
install/robot_patrol/include/robot_patrol/: direction_service.hpp
install/robot_patrol/lib/robot_patrol/: patrol_node  test_service_node
install/robot_patrol/share/robot_patrol/: local_setup.dsv  package.dsv  package.ps1  package.sh  package.xml
install/robot_patrol/share/robot_patrol/cmake/: ament_cmake_export_libraries-extras.cmake  robot_patrolConfig.cmake
install/robot_patrol/share/robot_patrol/launch/: start_test_service.launch.py
log/: latest_build
robot_patrol/: CMakeLists.txt  package.xml
robot_patrol/launch/: main.launch.py  start_direction_service.launch.py  start_gotopoint_action.launch.py  start_patrolling.launch.py
robot_patrol/src/: direction_service.cpp  go_to_point_action.cpp  patrol.cpp  patrol_v2.cpp  test_service.cpp
robot_patrol_interface/: CMakeLists.txt  package.xml
robot_patrol_interface/action/: GoToPoint.action
